--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 11:54:00 PM</p>
+    <p class="lastupdate">09/04/2020 11:59:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">75.2&#176;F</td>
+        <td class="data">75.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">75.2&#176;F</td>
+        <td class="data">75.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">75.2&#176;F</td>
+        <td class="data">75.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.1&#176;F</td>
+        <td class="data">50.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">43%</td>
+        <td class="data">42%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.931 inHg (0.041)</td>
+        <td class="data">29.928 inHg (0.040)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph N (0&#176;)</td>
+        <td class="data">3 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 9 hours, 7 minutes</td>
+      <td class="data">3 days, 9 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 9 hours, 7 minutes</td>
+      <td class="data">3 days, 9 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
