--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/05/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">75.3&#176;F</td>
+        <td class="data">75.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">75.3&#176;F</td>
+        <td class="data">75.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">75.3&#176;F</td>
+        <td class="data">75.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.6&#176;F</td>
+        <td class="data">51.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">42%</td>
+        <td class="data">43%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.928 inHg (0.040)</td>
+        <td class="data">29.928 inHg (0.037)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph NNE (22&#176;)</td>
+        <td class="data">4 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -110,11 +110,11 @@
       <table class="celestial">
         <tr>
           <td class="label">Sunrise</td>
-          <td class="data">06:36:36 AM</td>
+          <td class="data">06:37:21 AM</td>
         </tr>
         <tr>
           <td class="label">Sunset</td>
-          <td class="data">07:27:36 PM</td>
+          <td class="data">07:26:11 PM</td>
         </tr>
         <tr>
           <td class="label">Moon Phase</td>
@@ -153,10 +153,10 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:41:52 PM">
-            104.7</span><br/>
-          <span title="06:35:33 AM">
-            54.9</span>
+          <span title="12:00:01 AM">
+            75.3</span><br/>
+          <span title="12:02:37 AM">
+            75.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:41:52 PM (Friday)">
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="04:41:52 PM" class="hival">
-            104.7</span>
+          <span title="12:00:01 AM" class="hival">
+            75.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:41:52 PM (Friday)" class="hival">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="06:35:33 AM" class="loval">
-            54.9</span>
+          <span title="12:02:37 AM" class="loval">
+            75.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:16 AM (Sunday)" class="loval">
@@ -235,10 +235,10 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="10:05:12 AM">
-            56.7</span><br/>
-          <span title="04:43:42 PM">
-            43.9</span>
+          <span title="12:01:03 AM">
+            51.1</span><br/>
+          <span title="12:02:37 AM">
+            50.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:24:38 PM (Wednesday)">
@@ -269,10 +269,10 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="06:36:23 AM">
-            83</span><br/>
-          <span title="04:43:42 PM">
-            13</span>
+          <span title="12:01:03 AM">
+            43</span><br/>
+          <span title="12:00:01 AM">
+            42</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:37:07 AM (Thursday)">
@@ -303,10 +303,10 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="08:05:02 AM">
-            29.967</span><br/>
-          <span title="05:49:03 PM">
-            29.821</span>
+          <span title="12:00:06 AM">
+            29.932</span><br/>
+          <span title="12:03:01 AM">
+            29.928</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="06:13:41 PM">
-            14</span><br/>
-          0
+          <span title="12:00:01 AM">
+            5</span><br/>
+          17
         </td>
         <td class="data new_row hilo_week">
           <span title="04:15:00 PM (Monday)">
@@ -407,7 +407,7 @@
       <tr>
         <td class="label">Wind Average</td>
         <td class="data new_row hilo_day">
-          2</td>
+          3</td>
         <td class="data new_row hilo_week">
           2</td>
         <td class="data new_row hilo_month">
@@ -439,8 +439,8 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          2<br/>
-          4
+          3<br/>
+          16
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -470,10 +470,10 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="05:16:03 PM">
-            87.7</span><br/>
-          <span title="06:35:01 AM">
-            68.0</span>
+          <span title="12:01:01 AM">
+            80.4</span><br/>
+          <span title="12:00:01 AM">
+            80.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:03:02 PM (Thursday)">
@@ -505,10 +505,10 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="06:25:01 AM">
-            52</span><br/>
-          <span title="06:46:03 PM">
-            35</span>
+          <span title="12:00:01 AM">
+            38</span><br/>
+          <span title="12:00:01 AM">
+            38</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:10:02 AM (Wednesday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 9 hours, 12 minutes</td>
+      <td class="data">3 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 9 hours, 12 minutes</td>
+      <td class="data">3 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
