--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/05/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,10 +84,10 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">104.7<br/>
-            <span class="timestamp">04:41:52 PM</span><br/>
-            54.9<br/>
-            <span class="timestamp">06:35:33 AM</span>
+          <td class="data new_row">75.3<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            75.1<br/>
+            <span class="timestamp">12:02:37 AM</span>
           </td>
           <td class="data new_row">104.7<br/>
             <span class="timestamp">04:41:52 PM (Friday)</span><br/>
@@ -113,8 +113,8 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">104.7<br/>
-            <span class="timestamp">04:41:52 PM</span>
+          <td class="data new_row">75.3<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">104.7<br/>
             <span class="timestamp">04:41:52 PM (Friday)</span>
@@ -132,8 +132,8 @@
         <tr>
           <td class="label">Wind Chill</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">54.9<br/>
-            <span class="timestamp">06:35:33 AM</span>
+          <td class="data new_row">75.1<br/>
+            <span class="timestamp">12:02:37 AM</span>
           </td>
           <td class="data new_row">49.7<br/>
             <span class="timestamp">06:21:16 AM (Sunday)</span>
@@ -151,10 +151,10 @@
         <tr>
           <td class="label">Dew Point</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">56.7<br/>
-            <span class="timestamp">10:05:12 AM</span><br/>
-            43.9<br/>
-            <span class="timestamp">04:43:42 PM</span>
+          <td class="data new_row">51.1<br/>
+            <span class="timestamp">12:01:03 AM</span><br/>
+            50.4<br/>
+            <span class="timestamp">12:02:37 AM</span>
           </td>
           <td class="data new_row">59.6<br/>
             <span class="timestamp">01:24:38 PM (Wednesday)</span><br/>
@@ -180,10 +180,10 @@
         <tr>
           <td class="label">Humidity</td>
           <td class="units">%</td>
-          <td class="data new_row">83<br/>
-            <span class="timestamp">06:36:23 AM</span><br/>
-            13<br/>
-            <span class="timestamp">04:43:42 PM</span>
+          <td class="data new_row">43<br/>
+            <span class="timestamp">12:01:03 AM</span><br/>
+            42<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">93<br/>
             <span class="timestamp">06:37:07 AM (Thursday)</span><br/>
@@ -209,10 +209,10 @@
         <tr>
           <td class="label">Barometer</td>
           <td class="units"> inHg</td>
-          <td class="data new_row">29.967<br/>
-            <span class="timestamp">08:05:02 AM</span><br/>
-            29.821<br/>
-            <span class="timestamp">05:49:03 PM</span>
+          <td class="data new_row">29.932<br/>
+            <span class="timestamp">12:00:06 AM</span><br/>
+            29.928<br/>
+            <span class="timestamp">12:03:01 AM</span>
           </td>
           <td class="data new_row">30.063<br/>
             <span class="timestamp">09:40:02 AM (Wednesday)</span><br/>
@@ -275,9 +275,9 @@
             &#176;
           </td>
           <td class="data new_row">
-            14<br/>
-            0<br/>
-            <span class="timestamp">06:13:41 PM</span>
+            5<br/>
+            17<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">
             23<br/>
@@ -304,7 +304,7 @@
           <td class="label">Wind Average</td>
           <td class="units"> mph</td>
           <td class="data new_row">
-            2</td>
+            3</td>
           <td class="data new_row">
             2</td>
           <td class="data new_row">
@@ -334,8 +334,8 @@
             &#176;
           </td>
           <td class="data new_row">
-            2<br/>
-            4
+            3<br/>
+            16
           </td>
           <td class="data new_row">
             0<br/>
@@ -361,10 +361,10 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            87.7<br/>
-            <span class="timestamp">05:16:03 PM</span><br/>
-            68.0<br/>
-            <span class="timestamp">06:35:01 AM</span>
+            80.4<br/>
+            <span class="timestamp">12:01:01 AM</span><br/>
+            80.3<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">
             101.9<br/>
@@ -396,10 +396,10 @@
           <td class="label">Inside Humidity</td>
           <td class="units">%</td>
           <td class="data new_row">
-            52<br/>
-            <span class="timestamp">06:25:01 AM</span><br/>
-            35<br/>
-            <span class="timestamp">06:46:03 PM</span>
+            38<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            38<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">
             63<br/>
