--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 12:44:00 AM</p>
+    <p class="lastupdate">09/05/2020 12:49:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">73.9&#176;F</td>
+        <td class="data">73.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">73.9&#176;F</td>
+        <td class="data">73.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">73.9&#176;F</td>
+        <td class="data">73.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.2&#176;F</td>
+        <td class="data">50.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.930 inHg (0.019)</td>
+        <td class="data">29.928 inHg (0.017)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph N (0&#176;)</td>
+        <td class="data">4 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             75.3</span><br/>
-          <span title="12:42:15 AM">
-            73.9</span>
+          <span title="12:48:23 AM">
+            73.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:41:52 PM (Friday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="12:42:15 AM" class="loval">
-            73.9</span>
+          <span title="12:48:23 AM" class="loval">
+            73.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:16 AM (Sunday)" class="loval">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           4<br/>
-          7
+          8
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 9 hours, 57 minutes</td>
+      <td class="data">3 days, 10 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 9 hours, 57 minutes</td>
+      <td class="data">3 days, 10 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
