--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 01:19:00 AM</p>
+    <p class="lastupdate">09/05/2020 01:24:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">71.8&#176;F</td>
+        <td class="data">71.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">71.8&#176;F</td>
+        <td class="data">71.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">71.8&#176;F</td>
+        <td class="data">71.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.0&#176;F</td>
+        <td class="data">51.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">48%</td>
+        <td class="data">49%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.929 inHg (0.016)</td>
+        <td class="data">29.927 inHg (0.014)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph NNE (22&#176;)</td>
+        <td class="data">2 mph NE (45&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">80.0&#176;F</td>
+        <td class="data">79.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             75.3</span><br/>
-          <span title="01:17:27 AM">
-            71.8</span>
+          <span title="01:23:45 AM">
+            71.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:41:52 PM (Friday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="01:17:27 AM" class="loval">
-            71.8</span>
+          <span title="01:23:45 AM" class="loval">
+            71.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:16 AM (Sunday)" class="loval">
@@ -235,7 +235,7 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="12:38:37 AM">
+          <span title="01:20:29 AM">
             51.5</span><br/>
           <span title="12:02:37 AM">
             50.4</span>
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="01:11:55 AM">
-            48</span><br/>
+          <span title="01:20:29 AM">
+            49</span><br/>
           <span title="12:00:01 AM">
             42</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           4<br/>
-          9
+          10
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:01:01 AM">
             80.4</span><br/>
-          <span title="01:14:01 AM">
-            79.9</span>
+          <span title="01:23:01 AM">
+            79.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:03:02 PM (Thursday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 10 hours, 32 minutes</td>
+      <td class="data">3 days, 10 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 10 hours, 32 minutes</td>
+      <td class="data">3 days, 10 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
