--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 01:29:00 AM</p>
+    <p class="lastupdate">09/05/2020 01:34:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,23 +50,23 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">71.1&#176;F</td>
+        <td class="data">70.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">71.1&#176;F</td>
+        <td class="data">70.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">71.1&#176;F</td>
+        <td class="data">70.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.0&#176;F</td>
+        <td class="data">51.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">49%</td>
+        <td class="data">50%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
@@ -74,7 +74,7 @@
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph NNE (22&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             75.3</span><br/>
-          <span title="01:28:43 AM">
-            71.1</span>
+          <span title="01:31:47 AM">
+            70.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:41:52 PM (Friday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="01:28:43 AM" class="loval">
-            71.1</span>
+          <span title="01:31:47 AM" class="loval">
+            70.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:16 AM (Sunday)" class="loval">
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="01:20:29 AM">
-            49</span><br/>
+          <span title="01:29:53 AM">
+            50</span><br/>
           <span title="12:00:01 AM">
             42</span>
         </td>
@@ -439,7 +439,7 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          4<br/>
+          3<br/>
           11
         </td>
         <td class="data new_row hilo_week">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 10 hours, 42 minutes</td>
+      <td class="data">3 days, 10 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 10 hours, 42 minutes</td>
+      <td class="data">3 days, 10 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
